ingress/ingress-beta.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
  name: nginx
spec:
  # tls:
  # - hosts:
  #   - home.kokweng.net
  #   secretName: "home.kokweng.net-staging-tls"
  rules:
    - host: home.kokweng.net
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
            path: /
