ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/issuer: "letsencrypt-staging"
spec:
  # tls:
  #   - hosts:
  #     - home.kokweng.net
  #     secretName: home.kokweng.net-staging-tls
  rules:
  - host: home.kokweng.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
